unreleased

* Enhancements

  * allow #the_geom_geojson = Hash (used to only allow strings)

0.1.3 / 2015-02-16

* Enhancements

  * add simplify: option to #the_geom_geojson getter

0.1.2 / 2014-11-07

* Enhancements

  * Add Colorado, Denver and Colorado Springs to examples.

0.1.1 / 2014-10-19

* Enhancements

  * Going back to using PostGIS to convert to GeoJSON, clumsier but faster in worse case.

0.1.0 / 2014-10-19

* Breaking changes

  * Provide .with_geojson scope for faster #the_geom_geojson accesses (RGeo is WAY slower than ST_AsGeoJSON)

* Enhancements

  * Much faster than 0.0.5 if you use .with_geojson scope; unlike 0.0.4, works even if you don't
  * Opportunistically use read_attribute(:the_geom_geojson) if the user has included it in their SELECT
  * Provide TheGeomGeoJSON.ewkb_to_geojson(ewkb)
  * Warn when EWKB->GeoJSON parsing is taking too long

0.0.5 / 2014-10-17

* Enhancements

  * Don't go to PostGIS database to convert WKB->GeoJSON, use rubyland RGeo instead.

0.0.4 / 2014-10-09

* Enhancements

  *  Define example polygons in a clockwise direction to ensure compatibility with D3 3.0

0.0.3 / 2014-10-08

* Enhancements

  * Simplify geojson examples - thanks @ihough https://github.com/seamusabshere/the_geom_geojson/pull/1 !

0.0.2 / 2014-07-22

* Enhancements

  * Support alternate primary keys set on ActiveRecord with `self.primary_key = X`

0.0.1 / 2014-07-17

initial release!