@@ -14,5 +14,7 @@ module TheGeomGeoJSON
     colorado:                  '{"type":"MultiPolygon","coordinates":[[[[-109.043488,37.4846840000001],[-109.050076,41.0006590000001],[-102.051717,41.0023590000001],[-102.042089,36.993016],[-109.045223,36.999084],[-109.043488,37.4846840000001]]]]}',
     denver:                    '{"type":"MultiPolygon","coordinates":[[[[-105.829662,39.5648650000001],[-105.78323,39.629937],[-105.926681,39.6735880000001],[-105.887622,39.7966000000001],[-105.735925,39.804985],[-105.675798,39.9324450000001],[-105.147342,39.913886],[-104.979344,40.043951],[-103.705701,40.0013660000001],[-103.719664,38.8668270000001],[-104.055528,38.868868],[-104.051589,39.1283700000001],[-105.330444,39.1296850000001],[-105.329134,38.6972049999999],[-105.96975,38.6935510000001],[-105.925123,38.872178],[-106.192954,39.0177090000001],[-106.183972,39.3093539999999],[-106.135529,39.3795460000001],[-106.021966,39.361713],[-105.829662,39.5648650000001]]]]}',
     colorado_springs:          '{"type":"MultiPolygon","coordinates":[[[[-104.917757,38.883883],[-104.775825,39.035133],[-104.618156,38.744333],[-104.843785,38.72282],[-104.917757,38.883883]]]]}',
+    burlington_gc:             '{"type":"GeometryCollection","geometries":[{"type":"Polygon","coordinates":[[[-73.223,44.491],[-73.171,44.49],[-73.146,44.447],[-73.211,44.439],[-73.229,44.462],[-73.223,44.491]]]}]}',
+    burlington_fc:             '{"type":"FeatureCollection","features":[{"type":"Feature","properties":{},"geometry":{"type":"Polygon","coordinates":[[[-73.223,44.491],[-73.171,44.49],[-73.146,44.447],[-73.211,44.439],[-73.229,44.462],[-73.223,44.491]]]}}]}',
   }
 end
