@@ -3,6 +3,7 @@ unreleased
 * Enhancements
 
   * allow #the_geom_geojson = Hash (used to only allow strings)
+  * transparently handle GeometryCollection and FeatureCollection - as long as they only have one
 
 0.1.3 / 2015-02-16
 
